# cpp-rag-embed

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Taskfile.yml  pyproject.toml
src/: CMakeLists.txt  api.py  client.py  main.cpp
tools/: combine_files.py  update_main_cpp.py
